Implement POST /posts
